Adicionando resultados da revisão sistemática para qualidade dos testes unitários e ajustes gerais do texto

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -37,6 +37,30 @@
 	Year = {2013}
 }
 
+@article{asserts,
+	Author = "Mauricio Finavaro Aniche and Gustavo Ansaldi Oliva and Marco Aurélio Gerosa",
+	Title = {What Do The Asserts in a Unit Test Tell Us About Code Quality? A Study on Open Source and Industrial Projects},
+	Year = {2013}
+}
+
+@article{adequacao,
+	Author = "Hong Zhu and Patrick A. V. Hall and John H. R. May",
+	Title = {Software Unit Test Coverage and Adequacy},
+	Year = {1997}
+}
+
+@article{feedback,
+	Author = "Michael Perscheid and Damien Cassou and Robert Hirschfeld",
+	Title = {Test Quality Feedback Improving Effectivity and Efficiency of Unit Testing},
+	Year = {2012}
+}
+
+@article{cobertura,
+	Author = "Alexandre Bergel and Vanessa Peña",
+	Title = {Increasing test coverage with HAPAO},
+	Year = {2012}
+}
+
 @article{verificacao1,
 	Author = "H. Singh and H. S. Bawa",
 	Title = {Management of Effective Verification and Validation},
