--- a/editaveis/abreviaturas.tex
+++ b/editaveis/abreviaturas.tex
@@ -1,6 +1,7 @@
 \begin{siglas}
   \item CMMI Capability Maturity Model Integration
   \item IEEE Institute of Electrical and Eletronics Engineers
+  \item NASA National Aeronautics and Space Administration
   \item PMBOK Project Management Body of Knowledge
   \item VBSE Value-Based Software Engineering
 \end{siglas}
