--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -50,7 +50,7 @@ Por objetivos específicos para este trabalho, tem-se:
 
 	\item \textbf{Capítulo 3 - Metodologia}: especifica a metodologia adotada para a pesquisa e desenvolvimento deste trabalho.
 
-	\item \textbf{Capítulo 4 - Resultados}: apresenta os resultados obtidos a partir da execução da revisão sistemática de literatura.
+	\item \textbf{Capítulo 4 - Resultados}: apresenta os resultados obtidos a partir da execução da metodologia de pesquisa estabelecida para o desenvolvimento deste trabalho.
 
-	\item \textbf{Capítulo 5 - Proposta}: descreve a proposta de desenvolvimento de um \textit{framework} para avaliação da qualidade de código com base nos resultados obtidos a partir da realização da revisão sistemática.
+	\item \textbf{Capítulo 5 - Proposta}: descreve a proposta de desenvolvimento de um \textit{framework} para avaliação da qualidade de código com base nos resultados obtidos pela pesquisa bibliográfica e também, pela revisão sistemática.
 \end{itemize}
