--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -1,8 +1,14 @@
 \chapter{Metodologia}
 
-É importante destacar que a revisão sistemática de literatura foi adotada como metodologia para a corrente pesquisa. A revisão sistemática se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas à uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
+Pelo fato de o presente trabalho estar centrado na proposição de um \textit{framework} que reúne práticas propostas pela verificação de \textit{software} e integra estas às diretrizes fornecidas pela VBSE, fez-se necessária a seleção de mais de uma abordagem de pesquisa para a construção do trabalho.
 
-A opção por essa metodologia deve-se ao fato de que este trabalho está voltado para a tentativa de compreender quais tem sido as abordagens empregadas na análise da qualidade de código a partir das óticas de testes unitários e inspeções de código. Porém, essas abordagens são analisadas em conjunto com as diretrizes propostas pela VBSE, de forma a conceber um \textit{framework} que reúna de forma concisa as mesmas.
+Primeiramente, é válido notar que a pesquisa bibliográfica foi uma abordagem selecionada. O arcabouço teórico inerente à VBSE e às inspeções de código foi obtido a partir da pesquisa bibliográfica.
+
+Para Fonseca (2002), a pesquisa bibliográfica é realizada a partir do levantamento de referências teóricas já analisadas, e publicadas por meios escritos e eletrônicos. A pesquisa bibliográfica possibilita que o pesquisador conheça o que já se estudou sobre a temática.
+
+Como segunda abordagem, a revisão sistemática foi adotada. A revisão sistemática se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas à uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
+
+A opção por essa metodologia deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais tem sido as abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
 
 Outro aspecto interessante da revisão sistemática é que esta auxilia de maneira precisa na localização dos principais trabalhos publicados para uma determinada problemática, favorecendo a construção de uma linha cronológica que demonstra ao pesquisador quais linhas têm sido defendidas e quais são os campos mais promissores para uma futura exploração.
 
@@ -16,8 +22,4 @@ Neste trabalho, para a execução da revisão sistemática, considerou-se a prop
 
 A fase de planejamento consiste na identificação da necessidade de se desenvolver uma revisão sistemática, bem como elaborar um protocolo de revisão. Logo em seguida, na fase de condução, os objetivos mais pontuais de pesquisa são identificados e, adicionalmente, estudos são selecionados e seus dados são extraídos e analisados. Por fim, na fase de relato, os dados extraídos e analisados na fase anterior são externalisados e elabora-se uma discussão.
 
-\section{Planejamento da Revisão}
-
-\section{Protocolo de Revisão}
-
-\section{Condução da Revisão}
+Para maiores detalhes acerca da condução da revisão sistemática, o Apêndice A traz notas com relação à tal item.
