Adicionando ajustes na estrutura e acrescentando itens ao checklist de inspeção de código

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -66,3 +66,9 @@
 	Title = {Management of Effective Verification and Validation},
 	Year = {1995}
 }
+
+@article{inspecao1,
+	Author = "Jorge Rady de Almeida Júnior and João Batista Cmargo Júnior and Bruno Abrantes Basseto and Sérgio Miranda Paz",
+	Title = {Best Practices in Code Inspection for Safety-Critical Software},
+	Year = {2003}
+}
