--- a/editaveis/apendices.tex
+++ b/editaveis/apendices.tex
@@ -2,12 +2,8 @@
 
 \partapendices
 
-\chapter{Primeiro Apêndice}
+\chapter{Detalhamento da Revisão Sistemática}
 
 Texto do primeiro apêndice.
-
-\chapter{Segundo Apêndice}
-
-Texto do segundo apêndice.
 
 \end{apendicesenv}
