Adicionando reestruturação do texto e estratégia para análise da efetividade do framework

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,17 @@
+@book{qualidadesoftware,
+	author    = "André Koscianski and Michel dos Santos Soares",
+    title     = "Qualidade de Software - Aprenda as metodologias e técnicas mais modernas para o desenvolvimento de software",
+    year      = "2007",
+    publisher = "Novatec"
+}
+
+@book{pesquisa,
+	author    = "Khalid El Andaloussi ",
+    title     = "Pesquisas-ações: ciências, desenvolvimento, democracia",
+    year      = "2004",
+    publisher = "Edufscar"
+}
+
 @book{vbse1,
 	author    = "Stefan Biffl and Aybüke Aurum and Barry Boehm and Hakan Erdogmus and Paul Grünbacher",
     title     = "Value-Based Software Engineering",
