--- a/editaveis/referencialteorico.tex
+++ b/editaveis/referencialteorico.tex
@@ -56,7 +56,9 @@ Assim, o \textit{framework} proposto, além de avaliar a qualidade do código de
 
 O objetivo da Engenharia de \textit{Software} é criar produtos, serviços e processos que agreguem valor \cite{vbse1}. Mas, o que é valor de fato? O dicionário moderno de sociologia define valor como o princípio generalizado de comportamento em que os membros de um grupo sentem um forte compromisso em prover padrão para julgar atos e objetivos específicos. A definição é aplicável nas mais diversas áreas, inclusive no desenvolvimento de \textit{software}.
 
-O primeiro texto significativo que trouxe considerações sobre valor no âmbito do desenvolvimento de \textit{software} foi de Boehm, em 1981. Como mencionado na Introdução, a VBSE traz considerações de valor para o primeiro plano. Caso as perspectivas de valor não sejam explicitadas e conciliadas entre os envolvidos em um projeto, todos perdem ao final.
+O primeiro texto significativo que trouxe considerações sobre valor no âmbito do desenvolvimento de \textit{software} foi de Boehm, em 1981. Na obra \textit{Software Engineering Economics}, Boehm enfatiza o aspecto de que as equipes de projetos de desenvolvimento de \textit{software} sempre irão se deparar com recursos limitados. Não haverá tempo ou dinheiro suficientes para cobrir todas as funcionalidades pretendidas.
+
+Como mencionado na Introdução, a VBSE traz considerações de valor para o primeiro plano. Caso as perspectivas de valor não sejam explicitadas e conciliadas entre os envolvidos em um projeto, todos perdem ao final.
 
 O produto de \textit{software} reconhecidamente possui características internas e externas particulares, sendo portador uma natureza altamente flexível e volátil. Nesse sentido, há uma forte dependência da colaboração entre pessoas, com níveis de criatividade e qualificações diferenciadas. Faz-se necessárias então, uma construção e gestão mais rigorosas.
 
