--- a/tcc.tex
+++ b/tcc.tex
@@ -28,8 +28,8 @@
 \input{editaveis/introducao}
 \input{editaveis/referencialteorico}
 \input{editaveis/metodologia}
-\input{editaveis/resultados}
-\input{editaveis/proposta}
+\input{editaveis/framework}
+\input{editaveis/atividadesfuturas}
 \input{editaveis/consideracoesfinais}
 
 \bookmarksetup{startatroot} 
